#11 theme() and screen() - Tailwind Functions

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -57,3 +57,8 @@
   }
 } */
 /* --------------------------------------------------------------------------------------------- */
+
+.content-area {
+  height: calc(100vh - theme("spacing.12"));
+}
+/* --------------------------------------------------------------------------------------------- */
