--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -58,7 +58,7 @@
 } */
 /* --------------------------------------------------------------------------------------------- */
 
-.content-area {
+.content-area {                 /*---- for theme() ----*/
   height: calc(100vh - theme("spacing.12"));
 }
 /* --------------------------------------------------------------------------------------------- */
